# turbo-flow

./: .dockerignore  .envrc.template  .gitignore  Addendum: Git Operations, Slash Commands & GitHub Integration.md  CLAUDE.md  Dockerfile  README-ES.MD  README.md  UITEST.md  V4_Prompt_Guide.md  V4_Quick_Reference_Guide.md  V4_Turbo Flow v4 + Ruflo v3.5 — The Definitive Prompt & Workflow Guide.md  docker-compose.yml  docker-entrypoint.sh
.beads/: metadata.json
.devcontainer/: devcontainer.json
V2/: README.md
agent-adapter/: .gitignore  README.md  USE_CASES.md  devbox.json  package-lock.json  shell-integration.sh
agent-adapter/python/: README.md  pyproject.toml
agent-adapter/python/examples/: bug_fix.py  custom_tools.py  full_build.py  security_audit.py  single_agent.py
agent-adapter/python/tests/: __init__.py  test_adapter.py  test_agents.py  test_integration.py  test_memory.py  test_models.py  test_observability.py  test_registry.py  test_tools.py
agent-adapter/python/turboflow_adapter/: __init__.py  adapter.py  backend.py  cli.py  cloud_cli.py  errors.py  logger.py  process.py  registry.py  types.py
agent-adapter/python/turboflow_adapter/backends/: aider.py  claude.py  kiro.py  openhands.py  strands.py
agent-adapter/python/turboflow_adapter/strands/: __init__.py  agents.py  gitnexus.py  memory.py  models.py  observability.py  team.py  tools.py
devpods/: Taskfile.yml  bootstrap.sh  devbox.json  post-setup.sh  setup.sh
docs/: 01-release-notes-v4.md  02-quick-reference.md  03-prompt-guide.md  04-definitive-workflow-guide.md  05-setup-macos-linux.md  (+4 more)
infra/: .gitignore  README.md  app.py  cdk.json  pyproject.toml
infra/agent-runtime/: Dockerfile  build.sh  main.py  requirements.txt
infra/turboflow_infra/: __init__.py  platform_stack.py  provisioning_stack.py  tenant_stack.py
(+27 files in other folders)
