[project]
name = "turboflow-agent-adapter"
version = "0.1.0"
description = "Agent Adapter Interface — provider-independent agent abstraction for TurboFlow"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
strands = [
    "strands-agents>=0.1.0",
    "strands-agents-tools>=0.1.0",
]
all = [
    "strands-agents>=0.1.0",
    "strands-agents-tools>=0.1.0",
]
dev = [
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
tf-adapter = "turboflow_adapter.cli:main"
tf = "turboflow_adapter.cloud_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["turboflow_adapter"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
disallow_untyped_defs = false
check_untyped_defs = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
